--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,13 +130,19 @@ include_directories(
   lib/jest/include
   test/include
 )
+add_definitions(
+-D__STDC_CONSTANT_MACROS
+-D__STDC_LIMIT_MACROS
+)
 add_executable(${PROJECT_NAME}_config_test ${CMAKE_CURRENT_LIST_DIR}/test/src/config/main.cpp)
 target_link_libraries(${PROJECT_NAME}_config_test
-  ${PROJECT_NAME}_boost	
+  ${PROJECT_NAME}_boost
   ${LUA_LIBRARIES}
   ${CURSES_LIBRARY}
   ${ZLIB_LIBRARIES}
   ${CMAKE_THREAD_LIBS_INIT}
+  ${CLANG_LIBS}
+  ${LLVM_LIBS}
 )
 set_property(TARGET ${PROJECT_NAME}_config_test PROPERTY COMPILE_FLAGS ${WARNING_FLAGS})
 
