Fall back to download if FindLLVM fails
Travis is failing due to llvm-config not being found. Refactor
conditions to not continue to look for clang (and encounter an error) if
LLVM is not found.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,8 +50,12 @@ find_package(Threads REQUIRED)
 # Clang
 if (NOT DOWNLOAD_CLANG)
 	find_package(LLVM)
-	find_package(LibClang)
-elseif ((NOT LLVM_FOUND) OR (NOT CLANG_FOUND) OR (${DOWNLOAD_CLANG}))
+	if(LLVM_FOUND)
+		find_package(LibClang)
+	endif()
+endif()
+
+if ((NOT LLVM_FOUND) OR (NOT CLANG_FOUND) OR (${DOWNLOAD_CLANG}))
 	set(DOWNLOAD_CLANG 1)
 	include(cmake/clang/download.cmake)
 	find_package(LLVM)
