Download LLVM on Travis (as done so originally)

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,38 +5,62 @@ os:
 
 sudo: false
 
-compiler:
-  - gcc
-  - clang
-
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.8
     packages:
-      - clang-3.6
       - libstdc++-4.9-dev
-      - g++-4.9
       - liblua5.1-0-dev
       - lua5.1
       - libboost-dev
-    sources:
-      - llvm-toolchain-precise-3.6
-      - ubuntu-toolchain-r-test
+      - g++-4.9
+      - g++-5
+      - clang-3.8
+      - libclang-3.8-dev
+      - llvm-3.8
+
+env: 
+  - DOWNLOAD_CLANG=1 COMPILER=g++-4.9 GCC_VERSION=4.9 
+  - DOWNLOAD_CLANG=0 COMPILER=g++-4.9 GCC_VERSION=4.9 LLVM_CONFIG="llvm-config-3.8"
+  - DOWNLOAD_CLANG=1 COMPILER=clang++-3.8 CLANG_VERSION=3.8
+  - DOWNLOAD_CLANG=0 COMPILER=clang++-3.8 CLANG_VERSION=3.8 LLVM_CONFIG="llvm-config-3.8"
+
+before_install:
+  - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
+  - if [ -n "$CLANG_VERSION" ]; then export CXX="clang++-${CLANG_VERSION}" CC="clang-${CLANG_VERSION}"; fi
 
 install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
       brew install lua;
-    elif [ "$CXX" == "g++"  ]; then
-      export CXX="g++-4.9";
-    elif [ "$CXX" == "clang++"  ]; then
-      export CXX="clang++-3.6";
+      if [ -n "$CLANG_VERSION" ]; then export CXX="clang++" CC="clang"; fi;
+      if [ "$DOWNLOAD_CLANG" == 0 ]; then
+        brew update;
+        brew tap homebrew/versions;
+        brew install homebrew/versions/llvm38;
+      fi;
     fi
 
 script:
   - export OUTSOURCE=$PWD/build
   - export SOURCEPATH=$PWD
-  - mkdir -p $OUTSOURCE && cd $OUTSOURCE && cmake $SOURCEPATH && make && make install
+  - mkdir -p $OUTSOURCE
+  - |
+    if [ -n "$LLVM_CONFIG" ]; then
+      (cd $OUTSOURCE && cmake $SOURCEPATH -DLLVM_CONFIG=$(which ${LLVM_CONFIG}) -DDOWNLOAD_CLANG=$DOWNLOAD_CLANG)
+    else
+      (cd $OUTSOURCE && cmake $SOURCEPATH -DDOWNLOAD_CLANG=$DOWNLOAD_CLANG)
+    fi
+  - cd $OUTSOURCE && make && make install
   - cd $SOURCEPATH && echo "os.exit()" | lua -l color_coded
-  - cd $SOURCEPATH && mv $OUTSOURCE/clang* . && rm -rf $OUTSOURCE
-  - cmake . && make && make install
+  - if [ "$DOWNLOAD_CLANG" == 1 ]; then cd $SOURCEPATH && mv $OUTSOURCE/clang* . && rm -rf $OUTSOURCE; fi;
+  - |
+    if [ -n "$LLVM_CONFIG" ]; then
+      cmake . -DLLVM_CONFIG=$(which ${LLVM_CONFIG}) -DDOWNLOAD_CLANG=$DOWNLOAD_CLANG
+    else
+      cmake . -DDOWNLOAD_CLANG=$DOWNLOAD_CLANG
+    fi
+  - make && make install
   - cd $SOURCEPATH && echo "os.exit()" | lua -l color_coded
   - cd $SOURCEPATH && make color_coded_test || true
