Fix linker error on newer gccs
The linker seems to be very sensitive to the link order in some cases.
A few clang libs were linked in the wrong order and the
llvm libs were missing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,8 @@ endif()
 
 target_link_libraries(${PROJECT_NAME}
   ${CLANG_LIBS}
-  ${LLVM_LIBS}
+  ${LLVM_LIBRARIES}
+  ${LLVM_LDFLAGS}
 )
 
 target_link_libraries(${PROJECT_NAME}
@@ -136,13 +137,14 @@ add_definitions(
 )
 add_executable(${PROJECT_NAME}_config_test ${CMAKE_CURRENT_LIST_DIR}/test/src/config/main.cpp)
 target_link_libraries(${PROJECT_NAME}_config_test
+  ${CLANG_LIBS}
+  ${LLVM_LIBRARIES}
+  ${LLVM_LDFLAGS}
   ${PROJECT_NAME}_boost
   ${LUA_LIBRARIES}
   ${CURSES_LIBRARY}
   ${ZLIB_LIBRARIES}
   ${CMAKE_THREAD_LIBS_INIT}
-  ${CLANG_LIBS}
-  ${LLVM_LIBS}
 )
 set_property(TARGET ${PROJECT_NAME}_config_test PROPERTY COMPILE_FLAGS ${WARNING_FLAGS})
 
