--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,8 +134,10 @@ include_directories(
 add_definitions(
 -D__STDC_CONSTANT_MACROS
 -D__STDC_LIMIT_MACROS
--D_GLIBCXX_USE_CXX11_ABI=0
 )
+if(${DOWNLOAD_CLANG})
+    add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
+endif()
 add_executable(${PROJECT_NAME}_config_test ${CMAKE_CURRENT_LIST_DIR}/test/src/config/main.cpp)
 target_link_libraries(${PROJECT_NAME}_config_test
   ${CLANG_LIBS}
