Fix the default flags for search paths
Changes in the build system broke the generation of default search
paths. This commit fixes the bug and furthermore removes a hard-coded
version string to make it future-proof. Lastly, '-resource-dir' is used
for the clang internal headers/libraries instead of '-isystem'.

API version was automatically updated.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,8 +61,8 @@ endif()
 if ((NOT LLVM_FOUND) OR (NOT CLANG_FOUND) OR (${DOWNLOAD_CLANG}))
 	set(DOWNLOAD_CLANG 1)
 	include(cmake/clang/download.cmake)
-	find_package(LLVM)
-	find_package(LibClang)
+	find_package(LLVM REQUIRED)
+	find_package(LibClang REQUIRED)
 endif()
 
 include_directories(
